@@ -90,7 +90,7 @@ let build_sequence =
    "packing/pack_concl.hl";
    "packing/pack3.hl";  (* needs pack_defs.hl *)
 
-   "packing/TARJJUW.ml";
+(*   "packing/TARJJUW.ml"; weakly_saturated def. modified in svn 1912.  *)
    "packing/TIWWFYQ.hl";
    "packing/RHWVGNP.hl";
    "packing/DRUQUFE.hl";
