@@ -33,3 +33,7 @@ Sun Jul 25 06:48:44 ICT 2010
     new hypermap file
     renames lemma_card_inverse_map_eq to lemma_orbit_inverse_map
     gives a new definition of mAdd.
+
+Fri Jul 30 10:40:40 ICT 2010
+    Definition of weakly_saturated was corrected so that it agrees with
+    flypaper.  This temporarily breaks the proof of TARJJUW.
